fix dark mode text

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap'); */
 
 @layer base {
   :root {
@@ -74,10 +75,13 @@
   }
   body {
     @apply bg-background text-foreground;
+    /* font-family: 'VT323', monospace; */
   }
-
-
 }
+
+/* body {
+  font-family: 'VT323', sans-serif;
+} */
 
 @layer components {
   .connect-btn-last {
